--- a/components/header.html
+++ b/components/header.html
@@ -27,7 +27,7 @@
             "Text": "¿Qué es el gas LP?",
             "Query": null,
             "Title": "",
-            "Url": "/que-es-el-gas-lp.php",
+            "Url": "/acerca_de/que_es_gas_lp.php",
             "Target": "",
             "Style": null
           },
@@ -44,7 +44,7 @@
             "Text": "Nosotros",
             "Query": null,
             "Title": "",
-            "Url": "/who-we-are/our-brands.html",
+            "Url": "/acerca_de/nosotros.php",
             "Target": "",
             "Style": null
           },
@@ -79,7 +79,7 @@
             "Text": "Pedidos",
             "Query": null,
             "Title": "",
-            "Url": "/what-we-do/energy.html",
+            "Url": "/servicios/pedido.php",
             "Target": "",
             "Style": null
           },
@@ -96,7 +96,7 @@
             "Text": "Facturación",
             "Query": null,
             "Title": "",
-            "Url": "/what-we-do/technology-and-innovation.html",
+            "Url": "/servicios/facturacion.php",
             "Target": "",
             "Style": null
           },
@@ -131,7 +131,7 @@
             "Text": "Asesoría técnica",
             "Query": null,
             "Title": "",
-            "Url": "/sustainability/environment/energy-transition.html",
+            "Url": "/soporte_y_asesoria/asesoria_tecnica.php",
             "Target": "",
             "Style": null
           },
@@ -148,7 +148,7 @@
             "Text": "Recomendaciones",
             "Query": null,
             "Title": "",
-            "Url": "/sustainability/environment/energy-transition.html",
+            "Url": "/soporte_y_asesoria/recomendaciones.php",
             "Target": "",
             "Style": null
           },
@@ -165,7 +165,7 @@
             "Text": "Medidas de seguridad",
             "Query": null,
             "Title": "",
-            "Url": "/sustainability/environment/energy-transition.html",
+            "Url": "/medidas_de_seguridad.php",
             "Target": "",
             "Style": null
           },
@@ -200,7 +200,7 @@
             "Text": "Contacto",
             "Query": null,
             "Title": "",
-            "Url": "/investors/events-presentations.html",
+            "Url": "/contacto/contacto.php",
             "Target": "",
             "Style": null
           },
@@ -245,7 +245,7 @@
     "Text": "Chevron",
     "Query": "",
     "Title": null,
-    "Url": "/",
+    "Url": "/index.php",
     "Target": "",
     "TargetId": "00000000-0000-0000-0000-000000000000",
     "Type": 0,
@@ -262,7 +262,7 @@
                 </button> 
             </li>
             <li class="nav-2023-mobile-item nav-2023-mobile-hallmark-container">
-                <a class="nav-2023-hallmark" href=index.php>
+                <a class="nav-2023-hallmark" href=/index.php>
                     <img class="img-fluid hallmark-theme-dark" src=/assets/images/logotipe/logo.png alt="Chevron" />
                     <img class="img-fluid hallmark-theme-light" src=/assets/images/logotipe/logo.png alt="Chevron" />
                 </a>
@@ -306,7 +306,7 @@
 
             </ul>
             <div class="nav-2023-hallmark-container d-none d-lg-block">
-                <a class="nav-2023-hallmark" href=index.php>
+                <a class="nav-2023-hallmark" href=/index.php>
                     <img class="img-fluid hallmark-theme-dark" src=/assets/images/logotipe/logo.png alt="Chevron" />
                     <img class="img-fluid hallmark-theme-light" src=/assets/images/logotipe/logo.png alt="Chevron" />
                 </a>
