--- a/components/header.html
+++ b/components/header.html
@@ -165,7 +165,7 @@
             "Text": "Medidas de seguridad",
             "Query": null,
             "Title": "",
-            "Url": "/medidas_de_seguridad.php",
+            "Url": "/soporte_y_asesoria/medidas_de_seguridad.php",
             "Target": "",
             "Style": null
           },
