--- a/components/header.html
+++ b/components/header.html
@@ -104,6 +104,23 @@
           "PromoCards": [],
           "ChildLinks": []
         },
+        {
+          "Link": {
+            "TargetId": "00000000-0000-0000-0000-000000000000",
+            "Type": 0,
+            "Anchor": null,
+            "Class": "",
+            "Text": "Contacto",
+            "Query": null,
+            "Title": "",
+            "Url": "/servicios/contacto.php",
+            "Target": "",
+            "Style": null
+          },
+          "Title": "Contacto",
+          "PromoCards": [],
+          "ChildLinks": []
+        },
       ]
     },
     {
@@ -175,41 +192,6 @@
         },
       ]
     },
-    {
-      "Link": {
-        "TargetId": "00000000-0000-0000-0000-000000000000",
-        "Type": 0,
-        "Anchor": null,
-        "Class": "",
-        "Text": "Contacto",
-        "Query": null,
-        "Title": "",
-        "Url": "",
-        "Target": "",
-        "Style": null
-      },
-      "Title": "Contacto",
-      "PromoCards": [],
-      "ChildLinks": [
-        {
-          "Link": {
-            "TargetId": "00000000-0000-0000-0000-000000000000",
-            "Type": 0,
-            "Anchor": null,
-            "Class": "",
-            "Text": "Contacto",
-            "Query": null,
-            "Title": "",
-            "Url": "/contacto/contacto.php",
-            "Target": "",
-            "Style": null
-          },
-          "Title": "Contacto",
-          "PromoCards": [],
-          "ChildLinks": []
-        }
-      ]
-    },
   ],
   "Hallmark": {
     "Alt": "",
@@ -217,7 +199,7 @@
     "Class": null,
     "Height": 96,
     "HSpace": 0,
-    "Src": "/assets/images/logotipe/logo.png",
+    "Src": "/assets/images/logotype/logotype.png",
     "VSpace": 0,
     "Width": 96,
     "MediaId": "00000000-0000-0000-0000-000000000000",
@@ -231,7 +213,7 @@
     "Class": null,
     "Height": 96,
     "HSpace": 0,
-    "Src": "/assets/images/logotipe/logo.png",
+    "Src": "/assets/images/logotype/logotype.png",
     "VSpace": 0,
     "Width": 96,
     "MediaId": "00000000-0000-0000-0000-000000000000",
@@ -263,8 +245,8 @@
             </li>
             <li class="nav-2023-mobile-item nav-2023-mobile-hallmark-container">
                 <a class="nav-2023-hallmark" href=/index.php>
-                    <img class="img-fluid hallmark-theme-dark" src=/assets/images/logotipe/logo.png alt="Chevron" />
-                    <img class="img-fluid hallmark-theme-light" src=/assets/images/logotipe/logo.png alt="Chevron" />
+                    <img class="img-fluid hallmark-theme-dark" src=/assets/images/logotype/logotype.png alt="Chevron" />
+                    <img class="img-fluid hallmark-theme-light" src=/assets/images/logotype/logotype.png alt="Chevron" />
                 </a>
             </li>
             <li class="nav-2023-mobile-item">
@@ -297,18 +279,12 @@
                             </a>
 
                     </li>
-                    <li class="nav-2023-item">
-                            <a class="nav-2023-toggler nav-2023-link cta-link type-navigation text-reduced">
-                                <span class="cta-underline">Contacto</span>
-                            </a>
-
-                    </li>
 
             </ul>
             <div class="nav-2023-hallmark-container d-none d-lg-block">
                 <a class="nav-2023-hallmark" href=/index.php>
-                    <img class="img-fluid hallmark-theme-dark" src=/assets/images/logotipe/logo.png alt="Chevron" />
-                    <img class="img-fluid hallmark-theme-light" src=/assets/images/logotipe/logo.png alt="Chevron" />
+                    <img class="img-fluid hallmark-theme-dark" src=/assets/images/logotype/logotype.png alt="Chevron" />
+                    <img class="img-fluid hallmark-theme-light" src=/assets/images/logotype/logotype.png alt="Chevron" />
                 </a>
             </div>
             <ul class="nav-2023-list nav-2023-list-level-2 nav-2023-list-right">
